Fix spacing with shadow boxes and wrapping of buttons on mobile devices

--- a/Resources/Public/css/style.css
+++ b/Resources/Public/css/style.css
@@ -175,6 +175,8 @@ textarea.form-control {
 }
 
 .shadow{
+  padding-left: 20px;
+  padding-right: 20px;
   border: 5px solid white;
   box-shadow: 1px 1px 20px -5px black;
   background: white;
@@ -339,6 +341,7 @@ i.fa {
     border-radius: 1px;
     font-weight: 300;
     padding: 10px 25px 10px 25px;
+    display: inline-block;
 }
 
 .weiterlesen-button:hover {
